install dev-certs on devcontainer created
also fixes some casing-errors in vscode files

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/src/backend/bin/Debug/net7.0/backend.dll",
+            "program": "${workspaceFolder}/src/Backend/bin/Debug/net7.0/Backend.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/src/backend",
+            "cwd": "${workspaceFolder}/src/Backend",
             "stopAtEntry": false,
             // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
             "serverReadyAction": {
