--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -44,7 +44,7 @@
 	// "customizations": {},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	"forwardPorts": [5432]
+	"forwardPorts": [5432],
 	// "portsAttributes": {
 	//		"5001": {
 	//			"protocol": "https"
@@ -52,7 +52,7 @@
 	// }
 
     // Use 'postCreateCommand' to run commands after the container is created.
-    // "postCreateCommand": "dotnet --info",
+    "postCreateCommand": "dotnet dev-certs https;dotnet build"
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
