add architectural decision records (ADRs) to /doc/adr

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,8 @@
             "username": "postgres",
             "password": "postgres"
         }
-    ]
+    ],
+    "adr.project.directory": "doc/adr",
+    "adr.templates.directory": ".adr-templates",
+    "adr.templates.repo": "https://github.com/vincent-ledu/adr-template.git"
 }
