--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -3,6 +3,9 @@ name: Build and test
 on:
   push:
     branches: [ main ]
+    paths:
+      - 'src/**'
+      - '.github/**'
 
 jobs:
   build-and-test:
