add jaeger and connect them with otlp
i think the problem was that i had no otlp pipeline from traces, so i
never saw anything in prometheus.

i added jaeger, which is good for viewing traces, and set up a pipeline
in otel-collector from incoming otlp to outgoing jaeger (still otlp).

i now see traces in jaeger, i see some metrics (i think) in prometheus,
and the logs are going to the console in otlp (and in the app).

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -13,7 +13,8 @@ services:
     command: sleep infinity
 
     # Runs app on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
-    network_mode: service:db
+    networks:
+      - backend
 
     # Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
     # user: root
@@ -30,6 +31,8 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
       POSTGRES_DB: postgres
+    networks:
+      - backend
 
     # Add "forwardPorts": ["5432"] to **devcontainer.json** to forward PostgreSQL locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
@@ -47,6 +50,8 @@ services:
       - 4317:4317 # OTLP gRPC receiver
       - 4318:4318 # OTLP http receiver
       - 55679:55679 # zpages extension
+    networks:
+      - backend
 
   # Prometheus for showing metrics, traces and logs
   prometheus:
@@ -54,6 +59,21 @@ services:
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
-      - 9090:9090
+      - 9090:9090 # Prometheus UI
+    networks:
+      - backend
+
+  jaeger:
+    image: jaegertracing/all-in-one
+    ports:
+      - 16686:16686 # Jaeger UI
+    environment:
+      - COLLECTOR_OTLP_ENABLED=true
+    networks:
+      - backend
+
 volumes:
   postgres-data:
+
+networks:
+  backend:
