make otel export endpoint configurable and trace logs as events

--- a/src/Backend/appsettings.json
+++ b/src/Backend/appsettings.json
@@ -13,6 +13,9 @@
     "username": "postgres",
     "password": "postgres"
   },
+  "OpenTelemetry": {
+    "exporterEndpoint": "http://otel-collector:4317"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
