move telemetry and db -files into their own folders

--- a/src/Backend/appsettings.json
+++ b/src/Backend/appsettings.json
@@ -13,8 +13,8 @@
     "username": "postgres",
     "password": "postgres"
   },
-  "OpenTelemetry": {
-    "exporterEndpoint": "http://otel-collector:4317"
+  "OpenTelemetryExport": {
+    "endpoint": "http://otel-collector:4317"
   },
   "Logging": {
     "LogLevel": {
