add feature-flags controlled by appsettings
this will add the standard microsoft feature-management nuget package
and set up one feature-flag in appsettings that gives 50% of the requests
3 days of forecast and the rest 5 days of forecast.

this is intended as a demonstration of how to use feature-flags, and you
should remove this in your own project.

introduces a new class FeatureFlags that is used to access the feature-flags
from the rest of the application as constant strings.

--- a/src/Backend/Backend.csproj
+++ b/src/Backend/Backend.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <PackageReference Include="dapper" Version="2.1.15" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.12" />
+    <PackageReference Include="microsoft.featuremanagement" Version="3.0.0" />
     <PackageReference Include="npgsql" Version="7.0.6" />
     <PackageReference Include="npgsql.opentelemetry" Version="7.0.6" />
     <PackageReference Include="opentelemetry" Version="1.6.0" />
