--- a/src/Backend/appsettings.json
+++ b/src/Backend/appsettings.json
@@ -16,6 +16,18 @@
   "OpenTelemetryExport": {
     "endpoint": "http://otel-collector:4317"
   },
+  "FeatureManagement": {
+    "ClippedForecasts": {
+      "EnabledFor": [
+        {
+          "Name": "Percentage",
+          "Parameters": {
+            "Value": 50
+          }
+        }
+      ]
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
