--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -52,7 +52,7 @@
 	// }
 
     // Use 'postCreateCommand' to run commands after the container is created.
-    "postCreateCommand": "dotnet dev-certs https && sudo apt-get update && sudo apt-get install -y dotnet-sdk-8.0 && dotnet restore"
+    "postCreateCommand": "dotnet dev-certs https && dotnet restore" // && sudo apt-get update && sudo apt-get install -y dotnet-sdk-8.0 && dotnet restore"
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
